--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1 class="header--main">Discover hidden places in the world around you</h1>
     <p><a href="#" class="link--cta">Download Excursion (Coming soon!)</a></p>
-    
+    <video src="./resources/videos/MP4 stock video.mp4" autoplay loop type="video/mp4"></video>
 </body>
 </html>
