--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <video autoplay loop>
         <source src="./resources/videos/MP4 stock video.mp4" type="video/mp4">
     </video>
+    <h2 class="header--secondary">Your personal travel guide</h2>
+    <h4 class="header--subheader">Excursion remembers places you like, and recommends new points of interest around you.</h4>
 </body>
 </html>
