Created images and last texts

--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
     </video>
     <h2 class="header--secondary">Your personal travel guide</h2>
     <h4 class="header--subheader">Excursion remembers places you like, and recommends new points of interest around you.</h4>
+    <p><img src="./resources/images/Landscape image.jpg" alt="Landscape_img"></p>
+    <p><img src="./resources/images/Cellphone icon.png" alt="Cellphone"></p>
+    <h2 class="header--secondary">Coming Soon for iPhone and Android</h2>
+    <p><a href="#" class="link--cta">Download Excursion (Coming soon!)</a></p>
 </body>
 </html>
