--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
     <p><img src="./resources/images/Cellphone icon.png" alt="Cellphone"></p>
     <h2 class="header--secondary">Coming Soon for iPhone and Android</h2>
     <p><a href="#" class="link--cta">Download Excursion (Coming soon!)</a></p>
+    <p class="footer">© Excursion</p>
+
 </body>
 </html>
