Autoplay video fix

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="header--main">Discover hidden places in the world around you</h1>
     <p><a href="#" class="link--cta">Download Excursion (Coming soon!)</a></p>
-    <video autoplay loop>
+    <video autoplay loop muted>
         <source src="./resources/videos/MP4 stock video.mp4" type="video/mp4">
     </video>
     <h2 class="header--secondary">Your personal travel guide</h2>
